<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_edittext_rounded_white"
    android:padding="@dimen/_32sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.gamefinisheddialog.GameFinishedDialog">

    <TextView
        android:id="@+id/tv_title_result"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/tv_dialog_title"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_game_result"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        tools:text="Hasil Permainan"
        android:textAlignment="center"
        android:textSize="@dimen/_32ssp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_result" />


    <Button
        android:id="@+id/btn_play_again"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/btn_play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_game_result" />
    <Button
        android:id="@+id/btn_back_to_menu"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/btn_back_to_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_play_again" />

</androidx.constraintlayout.widget.ConstraintLayout>