<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200_transparent"
    tools:context=".ui.menu.GameMenuActivity">

    <TextView
        android:id="@+id/tv_title_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/funny"
        android:textColor="@color/black"
        android:text="@string/tv_title_game_menu"
        android:textSize="@dimen/_32sdp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_player_vs_player"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/ic_player_vs_player"
        app:layout_constraintLeft_toLeftOf="@id/tv_title_page"
        app:layout_constraintRight_toRightOf="@id/tv_title_page"
        app:layout_constraintTop_toBottomOf="@id/tv_title_page" />
    <TextView
        android:id="@+id/tv_player_vs_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/funny"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/black"
        android:text="@string/tv_game_menu_player_vs_player"
        app:layout_constraintTop_toBottomOf="@id/iv_player_vs_player"
        app:layout_constraintLeft_toLeftOf="@id/iv_player_vs_player"
        app:layout_constraintRight_toRightOf="@id/iv_player_vs_player" />


        <ImageView
            android:id="@+id/iv_player_vs_computer"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/ic_player_vs_computer"
            app:layout_constraintTop_toBottomOf="@id/tv_player_vs_player"
            app:layout_constraintLeft_toLeftOf="@id/tv_player_vs_player"
            app:layout_constraintRight_toRightOf="@id/tv_player_vs_player" />

    <TextView
        android:id="@+id/tv_player_vs_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/funny"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/black"
        android:text="@string/tv_game_menu_player_vs_com"
        app:layout_constraintTop_toBottomOf="@id/iv_player_vs_computer"
        app:layout_constraintLeft_toLeftOf="@id/iv_player_vs_computer"
        app:layout_constraintRight_toRightOf="@id/iv_player_vs_computer" />


</androidx.constraintlayout.widget.ConstraintLayout>